kubernetes/backend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip
  labels:
    app: curdle-backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: curdle-backend
