kubernetes/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip
  labels:
    app: curdle-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: curdle-frontend
