kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curdle-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip
                port:
                  number: 4200
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip
                port:
                  number: 80
